logs/dag_id=postgres_operator_dag/run_id=manual__2024-05-06T110251.731363+0000/task_id=insert_to_postgres/attempt=3.log
[2024-05-06T11:27:39.492+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-06T11:27:39.514+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T11:02:51.731363+00:00 [queued]>
[2024-05-06T11:27:39.523+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T11:02:51.731363+00:00 [queued]>
[2024-05-06T11:27:39.524+0000] {taskinstance.py:2303} INFO - Starting attempt 3 of 3
[2024-05-06T11:27:39.535+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): insert_to_postgres> on 2024-05-06 11:02:51.731363+00:00
[2024-05-06T11:27:39.540+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=1415) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-06T11:27:39.542+0000] {standard_task_runner.py:63} INFO - Started process 1416 to run task
[2024-05-06T11:27:39.542+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'insert_to_postgres', 'manual__2024-05-06T11:02:51.731363+00:00', '--job-id', '124', '--raw', '--subdir', 'DAGS_FOLDER/kachevo.py', '--cfg-path', '/tmp/tmpe5jw_exu']
[2024-05-06T11:27:39.544+0000] {standard_task_runner.py:91} INFO - Job 124: Subtask insert_to_postgres
[2024-05-06T11:27:39.583+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T11:02:51.731363+00:00 [running]> on host db2363de7199
[2024-05-06T11:27:39.671+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_dag' AIRFLOW_CTX_TASK_ID='insert_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-05-06T11:02:51.731363+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-06T11:02:51.731363+00:00'
[2024-05-06T11:27:39.672+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-06T11:27:39.700+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-05-06T11:27:39.843+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-06T11:27:39.843+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kachevo.py", line 72, in insert_to_postgres
    cursor.execute("INSERT INTO pet (pet_id, name, pet_type, birth_date, owner) VALUES (%s)", mysql_result)
psycopg2.errors.SyntaxError: ОШИБКА:  INSERT содержит больше целевых столбцов, чем выражений
LINE 1: INSERT INTO pet (pet_id, name, pet_type, birth_date, owner) ...
                                 ^
HINT:  Источником данных является строка, включающая столько же столбцов, сколько требуется для INSERT. Вы намеренно использовали скобки?

[2024-05-06T11:27:39.854+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=postgres_operator_dag, task_id=insert_to_postgres, execution_date=20240506T110251, start_date=20240506T112739, end_date=20240506T112739
[2024-05-06T11:27:39.864+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 124 for task insert_to_postgres (ОШИБКА:  INSERT содержит больше целевых столбцов, чем выражений
LINE 1: INSERT INTO pet (pet_id, name, pet_type, birth_date, owner) ...
                                 ^
HINT:  Источником данных является строка, включающая столько же столбцов, сколько требуется для INSERT. Вы намеренно использовали скобки?
; 1416)
[2024-05-06T11:27:39.877+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-06T11:27:39.890+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-06T11:27:39.892+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
